
plugins {
    id 'java'
	id 'groovy'
	id 'maven-publish'
}

publishing {
	publications {
		tran(MavenPublication) {
			from components.java
		}
	}

	repositories {
		if (project.hasProperty('maven_local_repo')) {
		maven {
			url maven_local_repo
		}
		}	 else {
		mavenLocal()
		}
	}
}

repositories {
	if (project.hasProperty('maven_local_repo')) {
	    maven {
			url maven_local_repo
		} 
	} else {
		mavenLocal()
	}
	if (System.env.NEXUS_REPO_ALL_URL) {
		maven {
			credentials {
				username System.env.NEXUS_USER
				password System.env.NEXUS_PASSWORD
			}
			url = uri(System.env.NEXUS_REPO_ALL_URL)
		}
	} else {
		maven {
			url = uri('https://repo.maven.apache.org/maven2/')
		}
	}
}

dependencies {
    implementation 'org.codehaus.groovy:groovy:3.0.7'
    implementation 'de.fekl:dine:1.0.0-SNAPSHOT'
    implementation 'de.fekl:stat:1.0.0-SNAPSHOT'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

group = 'de.fekl'
version = '1.0.0-SNAPSHOT'
description = 'tran'
java.sourceCompatibility = JavaVersion.VERSION_15

compileJava {
    options.compilerArgs += ['--enable-preview']
}
compileTestJava {
	options.compilerArgs += ['--enable-preview']
}
test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}

//task customFatJar(type: Jar) {
//	manifest {
//						attributes 'Implementation-Title': 'TranComplete',
//				'Implementation-Version': version,
//				'Built-By': System.getProperty('user.name'),
//				'Built-Date': new Date(),
//				'Built-JDK': System.getProperty('java.version')
//	}
//	baseName = 'all-in-one-jar'
//	from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } } 
//	{
//		exclude "META-INF/*.SF"
//		exclude "META-INF/*.DSA"
//		exclude "META-INF/*.RSA"
//		exclude "org/*"
//		exclude "groovy*/*"
//	  }
//	with jar
//}



